--- a/jpdw_server/package.json
+++ b/jpdw_server/package.json
@@ -12,8 +12,6 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "faker": "^5.5.3",
-    "nodemon": "^3.1.3",
-    "unofficial-jisho-api": "^2.3.4"
+    "nodemon": "^3.1.3"
   }
 }
